# holochain-nodejs

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  build.sh  default.nix  foo  index.js  package-lock.json  package.json  publish.js
.circleci/: config.yml
example/: foo  index.js
lib/: container.js  index.js
native/: Cargo.toml
native/src/: app.rs  composer.rs  lib.rs
nodejs_conductor/: default.nix  package-lock.json  package.json  publish.js
nodejs_conductor/install/: default.nix
nodejs_conductor/native/: Cargo.toml
nodejs_conductor/nix/: install.nix  test.nix
nodejs_conductor/test/: default.nix
nodejs_waiter/: Cargo.toml
release/: config.nix  default.nix
release/audit/: default.nix
release/branch/: default.nix
release/github/: config.nix  default.nix
release/merge/: default.nix
release/prepare/: default.nix
release/versions/: default.nix
