[package]
name = "holochain-node"
version = "0.4.19-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "holochain_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "=0.2.0"

[dependencies]
neon = "=0.2.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
holochain_conductor_api = { git = "https://github.com/holochain/holochain-rust.git",tag = "v0.0.20-alpha3" }
holochain_core = { git = "https://github.com/holochain/holochain-rust.git",tag = "v0.0.20-alpha3" }
holochain_core_types = { git = "https://github.com/holochain/holochain-rust.git",tag = "v0.0.20-alpha3" }
holochain_node_test_waiter = { path = "../../nodejs_waiter" }
neon-serde = "=0.1.1"
